December 28, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Reverted to "Close" button instead of "OK/Cancel" for
   consistency with GNOME UI standards.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/dfcdrom.glade2: Likewise.
 * gui/ConfDlg.c: Likewise.
 * po/zh_TW.po: Updated.
 * README, NEWS: Updated.

December 19, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/WndMain.c: Added Portuguese (Brazilian) to the language list.
 * po/pt_BR.po, po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.

December 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/gpu.c: Hide the panels in fullscreen mode.

December 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/analog.c: Allow analog sticks to be mapped to non-axis
   events (keyboard & joystick buttons) as well.
 * plugins/dfinput/cfg.c: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/xkb.c: Likewise.
 * plugins/dfinput/pad.h: Likewise.
 * po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/pcsx.pot: Updated.
 * libpcsxcore/psxbios.c: Don't touch the stack pointer if pointed to the
   hardware area, which fixes FF7 chocobo racing problem. Don't always
   allocate stack spaces before softcall.

December 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/pad.c: Changed the value of center position to 127 instead
   of 128, which fixes the FF8 problem. Still need further confirmation about
   this, as all of the protocol docs I've read as well as psemu_plugin_defs.h
   say 128 is the center position.
 * libpcsxcore/r3000a.c: Minor cleanup.

December 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>
